fix scrollbar issue

--- a/asset/css/about.css
+++ b/asset/css/about.css
@@ -1,3 +1,7 @@
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   background-color: #7d2ae8;
   color: #fff;
