--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -1,4 +1,6 @@
-/* form */
+html {
+  scrollbar-gutter: stable;
+}
 
 nav {
   background-color: #fff;
